# otus_lesson5

./: CMakeLists.txt  document.cpp  document.hpp  editor.cpp  item.cpp  item.hpp  manager.cpp  manager.hpp  version.h.in  view.hpp
.github/workflows/: ci.yml
doc/: Editor.drawio
