cmake_minimum_required(VERSION 3.5)

project(editor  VERSION 1.0.0)
add_executable(editor editor.cpp document.cpp item.cpp manager.cpp)

set_target_properties(editor PROPERTIES
    CXX_STANDARD 17
    CXX_STANDARD_REQUIRED ON
    CXX_EXTENSIONS OFF
)

if (MSVC)
    target_compile_options(editor PRIVATE
        /W4
    )
else ()
    target_compile_options(editor PRIVATE
        -Wall -Wextra -pedantic -Werror
    )
endif()

if (MSVC)
    target_compile_options(editor PRIVATE /W4)
else ()
    target_compile_options(editor PRIVATE -Wall -Wextra -pedantic -Werror)
endif()

configure_file(
    "${CMAKE_CURRENT_SOURCE_DIR}/version.h.in" 
    "${CMAKE_BINARY_DIR}/version.h"          
)
target_include_directories(editor PRIVATE "${CMAKE_BINARY_DIR}")